--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<meta http-equiv="refresh" content="0; url=https://www.pacificadvisors.com/anne_ding">
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
